[project]
name = "dream-wedding-bot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aerich[toml]>=0.8.2",
    "aiogram>=3.19.0",
    "pydantic-settings>=2.8.1",
    "tortoise-orm[asyncpg]>=0.24.2",
]

[tool.aerich]
tortoise_orm = "infrastructures.database.TORTOISE_ORM"
location = "./migrations"
src_folder = "./src"

[dependency-groups]
dev = [
    "pytest>=8.3.5",
]
